hot fix: make "portafolio" fit on iphone 4

--- a/client/src/styles/_tabs.scss
+++ b/client/src/styles/_tabs.scss
@@ -160,7 +160,7 @@
         line-height: 1.5;
 
         border-bottom: none;
-        padding: 0.3rem 0.25rem;
+        padding: 0.3rem 0.2rem;
 
         position: relative;
 
